Fixed padding to top of intro section. fixed navigation bar was cutting off top image

--- a/css/index.css
+++ b/css/index.css
@@ -205,6 +205,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro {
+  padding-top: 75px;
+}
 @media (max-width: 500px) {
   .home .intro {
     min-width: 100%;
