--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,8 @@
 .home {
 
   .intro {
+
+    padding-top: 75px;
     
     @media @phone {
       .mobile-width();
